# Strelka_Ground_Station

./: .gitignore  Bugs and their fixes.odt  README.md
Ground_Station_Receiver/: Ground_Station_Receiver.ino
Packet_Receiver/packet_receiver/: Cargo.toml  dependencies.txt
Packet_Receiver/packet_receiver/src/: data_structures.rs  definitions.rs  main.rs
Receiver_Firmware/Ground_Station_Receiver/: Ground_Station_Receiver.ino
Receiver_Firmware/Laika_End_Node_Simulator/: Laika_End_Node_Simulator.ino
packet_logger/: Cargo.toml
packet_logger/data_2024-02-11_22-46-55/: current_node_ids.json
packet_logger/data_2024-02-11_22-46-55/Node_537093200/: GpsTrackingConfigSet.json  StreamPacketConfigSet.json  SystemStatePacketReq.json
packet_logger/src/: data_structures.rs  main.rs
strelka-gs-ui/: Ground Station Layout Plan.odg  package-lock.json  package.json
strelka-gs-ui-v2/: package-lock.json  package.json
strelka-gs-ui-v2/src/: App.jsx
strelka-gs-ui-v2/src/hooks/: useMqtt.js  useStorage.js  useWebsocket.js
strelka-gs-ui-v2/src/pages/: Home.jsx  Input.css  Input.jsx  Map.jsx
strelka-gs-ui-v2/src/utils/: storage.js
strelka-gs-ui-v3/: package-lock.json  package.json  tailwind.config.js
strelka-gs-ui-v3/public/: index.html
strelka-gs-ui-v3/src/: App.jsx  AppContent.jsx  index.css  index.js
strelka-gs-ui-v3/src/components/: 3d.js  BatteryGauge.jsx  ConnectionStatus.jsx  GPSCard.jsx  LineGraph.jsx  RocketRender.css  RocketRender.jsx  ToggleSwitch.jsx
strelka-gs-ui-v3/src/hooks/: mqttTopics.js  (+3 more)
strelka-gs-ui/src/: App.css  App.js  LEDIndicator.js
(+10 files in other folders)
