[package]
name = "packet_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "2.2.0"
bytes = "1.5.0"
chrono = "0.4.33"
mqtt = "0.1.4"
rumqttc = "0.23.0"
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1", features = ["rt-multi-thread"] }
