[package]
name = "packet_receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
binread = "2.2.0"
mqtt = "0.1.4"
rumqttc = "0.23.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
serial_enumerator = "0.2.12"
serialport = "4.2.1"
